[package]
name = "global"
version = "0.1.0"
description = "Macro and machinery for lock-free eventually consistent \"global\" variables across threads and processes"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/global"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "global"
path = "src/main.rs"